Fix spacing and add hover

--- a/css/main.css
+++ b/css/main.css
@@ -13,16 +13,18 @@ body {
 
 .img-flex {
   display: block;
-  width: 100%
+  width: 100%;
 }
 
 .btn-big {
   display: block;
   width: 100%;
+  height: 100%;
 }
 
 .robot {
-  padding-right: 2rem;
+  padding-right: 3em;
+  max-height: 14em;
 }
 
 .banner {
@@ -39,18 +41,20 @@ body {
   display: flex;
   width: 45em;
   max-width: 95%;
+  justify-content: space-around;
 }
 
 .content {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 h2 {
   font-size: 3rem;
   font-family: "Roboto Condensed";
   font-weight: bold;
-  margin: 0;
+  margin: 0 0 .25em;
   max-width: 7em;
 }
 
@@ -58,7 +62,7 @@ p {
   font-size: 1.5rem;
   max-width: 18em;
   line-height: 1.5;
-  margin: .5em 0;
+  margin: 0 0 .25em;
 }
 
 .btn {
@@ -70,4 +74,9 @@ p {
   border-radius: 5px;
   background-color: #333;
   padding: .8em;
+  margin: .3em 0;
+}
+
+.btn:hover {
+  background-color: #000;
 }
